# ASC11

./: .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_PLAN.md  README.md  vcpkg.json
include/: Entity.h  Game.h  Graphics.h  Map.h
src/: Entity.cpp  Game.cpp  Graphics.cpp  Map.cpp  main.cpp
